out.txt
  File "/home/nsambhu/github/carla-race/run/2023_12_18_16rl_custom2.py", line 293
    elif kmh > 15
                 ^
SyntaxError: invalid syntax
